--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,15 +1,4 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
  *= require_tree .
  *= require_self
  */
@@ -36,7 +25,7 @@ body {
 }
 
 main {
-    max-width: 40em;
+    max-width: 45em;
     margin: 0 auto;
     padding: 1rem;
 }
@@ -50,6 +39,7 @@ textarea,
 input,
 select,
 button {
+    font-family: inherit;
     font-size: 100%;
     border: 1px solid $border;
     padding: 0.2em 0.3em;
@@ -91,19 +81,8 @@ button + button {
     }
 }
 
-.display-inline {
-    display: inline;
-}
-
 .button-white {
     border-color: $border;
-}
-
-.button-transparent {
-    background: transparent;
-    border-color: transparent;
-    padding-left: 0;
-    padding-right: 0;
 }
 
 .button-container {
