--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,7 +1,7 @@
 <%- title @note.summary %>
 <main>
-    <blockquote>
-        <p id="note_text"><%=@note.text%></p>
+    <blockquote class="note">
+        <p><%=@note.text%></p>
         <footer>
             &#x2015;<cite>anonymous, <time datetime="<%=@note.created_at.getutc.iso8601%>" title="<%=@note.created_at.getutc.iso8601%>"><%=time_ago_in_words @note.created_at%> ago</time></cite>
         </footer>
