--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -6,8 +6,11 @@
             &#x2015;<cite>anonymous, <time datetime="<%=@note.created_at.getutc.iso8601%>" title="<%=@note.created_at.getutc.iso8601%>"><%=time_ago_in_words @note.created_at%> ago</time></cite>
         </footer>
     </blockquote>
-    <%=form_with url: note_likes_path(note_identifier: @note.identifier), local: true, class: 'display-inline' do |form| %>
-        <%=form.button @like_glyph, type: :submit, title: @like_title, class: 'button-transparent display-inline' %>
-        <span>+<%=number_to_human @note.likes.size%></span>
+    <% if @like %>
+        <p title="<%=pluralize @note.likes.size, 'person likes', 'people like'%> this note">❤️ +<%=number_to_human @note.likes.size%></p>
+    <% else %>
+        <%=form_with url: note_likes_path(note_identifier: @note.identifier), local: true do |form| %>
+            <%=form.button "❤️ +#{number_to_human @note.likes.size}", type: :submit, title: 'Like this note', class: 'like-note' %>
+        <% end %>
     <% end %>
 </main>
