Move JS includes to end of body tag; add meta tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%=content_for?(:title) ? content_for(:title) : ''%>Anonynotes</title>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%=csrf_meta_tags%>
     <%=csp_meta_tag%>
-
     <%=stylesheet_link_tag 'application', media: 'all'%>
-    <%=javascript_include_tag 'application'%>
-  </head>
-
-  <body>
+    <title><%=content_for?(:title) ? content_for(:title) : ''%>Anonynotes</title>
+</head>
+<body>
     <%=yield%>
-  </body>
+    <%=javascript_include_tag 'application'%>
+</body>
 </html>
