--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,3 +1,13 @@
-// Place all the styles related to the Index controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.notes-digest {
+    display: flex;
+}
+
+.notes-digest > section {
+    width: 50%;
+}
+
+.notes-digest ol {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
