Wrap index Notes digest on small screens

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -3,11 +3,18 @@
 }
 
 .notes-digest > section {
-    width: 50%;
+    flex-grow: 1;
 }
 
 .notes-digest ol {
     list-style: none;
     margin: 0;
     padding: 0;
+}
+
+@media only screen and (max-width: 30em) {
+    .notes-digest {
+        flex-direction: column;
+        flex-grow: 1;
+    }
 }
