--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,4 +1,4 @@
-<main>
+<main class="row">
     <h1>Anonynotes</h1>
     <p>Anonynotes is an anonymous note-sharing service.</p>
     <p>Get started and <%=link_to 'post a note', controller: :notes, action: :new%>.</p>
