--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,5 +1,5 @@
 <%- title @note.summary %>
-<main>
+<main class="row">
     <blockquote class="note">
         <p><%=@note.text%></p>
         <footer>
