--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -1,6 +1,8 @@
 <nav>
-    <%=link_to "Anonynotes", :root, class: "nav-brand"%>
-    <ul>
-        <li><%=link_to "Post", controller: :notes, action: :new%></li>
-    </ul>
+    <div class="row">
+        <%=link_to "Anonynotes", :root, class: "nav-brand"%>
+        <ul>
+            <li><%=link_to "Post", controller: :notes, action: :new%></li>
+        </ul>
+    </div>
 </nav>
