--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 <body>
     <%=render 'shared/nav_bar'%>
     <%=yield%>
+    <%=render 'shared/footer'%>
     <%=javascript_include_tag 'application'%>
 </body>
 </html>
