--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,19 +1,4 @@
 <%- title @note.summary %>
 <main class="row">
-    <blockquote class="note">
-        <p><%=@note.text%></p>
-        <footer>
-            &#x2015;<cite>anonymous, <time datetime="<%=@note.created_at.getutc.iso8601%>" title="<%=@note.created_at.getutc.iso8601%>"><%=time_ago_in_words @note.created_at%> ago</time></cite>
-        </footer>
-    </blockquote>
-    <div class="note-tools">
-        <% if @like %>
-            <p title="<%=pluralize @note.likes.size, 'person likes', 'people like'%> this note">❤️ +<%=number_to_human @note.likes.size%></p>
-        <% else %>
-            <%=form_with url: note_likes_path(note_identifier: @note.identifier), local: true do |form| %>
-                <%=form.button "❤️ +#{number_to_human @note.likes.size}", type: :submit, title: 'Like this note', class: 'like-note' %>
-            <% end %>
-        <% end %>
-        <p class="note-permalink"><%=link_to 'Permalink', @note, rel: :nofollow%></p>
-    </div>
+    <%= render partial: @note %>
 </main>
