Display Note creation errors when possible

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,7 +91,7 @@ button + button {
 
 .button-container {
     display: flex;
-    justify-content: flex-end;
+    align-items: center;
 }
 
 main + footer {
