--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,3 +1,4 @@
+<%- title 'Post a note' %>
 <main class="row">
     <%=form_with scope: :note, url: notes_path, local: true do |form| %>
         <div>
