--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -4,5 +4,9 @@
         <ul>
             <li><%=link_to "Post", controller: :notes, action: :new%></li>
         </ul>
+        <form action="/search" method="GET">
+            <input type="search" placeholder="search" name="q" value="<%=@query%>" required pattern="\S+">
+            <button type="submit" class="button-accent">Go</button>
+        </form>
     </div>
 </nav>
