CSS/layout tweaks

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@ body {
     margin: 0;
     padding-bottom: 6rem;
     font-family: sans-serif;
-    line-height: 1.4285714286;
+    line-height: calc(20/14);
 }
 
 .row {
