--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -9,8 +9,14 @@ nav > .row,
 nav form {
     display: flex;
     flex: 0 1 auto;
+    flex-wrap: wrap;
     align-items: center;
     padding: 0;
+}
+
+nav form {
+    margin: 0.50rem;
+    margin-right: 0;
 }
 
 nav ul {
