--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -24,10 +24,10 @@ blockquote.note {
 button.like-note {
     background: transparent;
     border: none;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
     line-height: 1;
     vertical-align: initial;
+    margin: 0;
 }
 
 .note-tools {
@@ -35,8 +35,13 @@ button.like-note {
     flex: 0 1 auto;
 }
 
-.note-tools .note-permalink {
-    margin-left: 1em;
+.note-tools .note-permalink,
+.note-tools .note-likes {
+    margin: 0;
+}
+
+.note-tools > * + * {
+    margin-left: 1em !important;
 }
 
 .button-container > span.form-errors {
