--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -30,7 +30,7 @@ nav form input[type="search"] {
     border-color: transparent;
 }
 
-nav a {
+nav .row a {
     color: $background;
     display: inline-block;
     padding: 0.75rem 0.90rem;
