--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -117,7 +117,7 @@ main + footer {
     text-align: right;
 }
 
-main + footer a {
+main + footer .row a {
     color: $border;
     text-decoration: none;
 }
