--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -12,7 +12,7 @@
                 <p class="note-likes" title="<%=pluralize @note.likes.size, 'person likes', 'people like'%> this note">❤️ +<%=number_to_human @note.likes.size%></p>
             <% else %>
                 <%=form_with url: note_likes_path(note_identifier: @note.identifier), local: true do |form| %>
-                    <%=form.button "❤️ +#{number_to_human @note.likes.size}", type: :submit, title: 'Like this note', class: 'like-note' %>
+                    <%=form.button "#{heart} +#{number_to_human @note.likes.size}", type: :submit, title: 'Like this note', class: 'like-note' %>
                 <% end %>
             <% end %>
             <p class="note-permalink"><%=link_to 'Permalink', @note, rel: :nofollow%></p>
