--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -121,3 +121,8 @@ main + footer .row a {
     color: $border;
     text-decoration: none;
 }
+
+::selection {
+    background: $black;
+    color: $white;
+}
