--- a/app/views/notes/_list_item.html.erb
+++ b/app/views/notes/_list_item.html.erb
@@ -1,1 +1,1 @@
-<li>+<%=number_to_human note.likes.size%> <%=link_to note.summarize, note%></li>
+<li>+<%=number_to_human(note.likes.size)%> <%=link_to note.summarize, note%></li>
