--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,4 +1,4 @@
-<% with_tools = true if local_assigns[:with_tools].nil? %>
+<% with_tools = local_assigns[:with_tools].nil? %>
 <section>
     <blockquote class="note">
         <p><%=note.text%></p>
