Fix footer version text and link

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
     <div class="row">
-        <span><%=link_to "v.#{Rails.configuration.version}", "https://github.com/jadefish/anonynotes/commit/#{Rails.configuration.version}", rel: :nofollow, target: '_blank'%></span>
+        <span><%=link_to Rails.configuration.version, "https://github.com/jadefish/anonynotes/tree/#{Rails.configuration.version}", rel: :nofollow, target: '_blank'%></span>
     </div>
 </footer>
