--- a/app/views/search/_result.html.erb
+++ b/app/views/search/_result.html.erb
@@ -3,6 +3,6 @@
     <p>
         <time datetime="<%=note.created_at.getutc.iso8601%>" title="<%=note.created_at.getutc.iso8601%>"><%=time_ago_in_words note.created_at%> ago</time>
         &nbsp;
-        <span>#{heart} +<%=number_to_human note.likes.size%></span>
+        <span><%= heart %> +<%=number_to_human note.likes.size%></span>
     </p>
 </section>
